# sars-cov2-strain-caller

./: Makefile  README.md  pangolin.conda.yml  pyproject.toml
src/app/: api.py  utils.py
tests/: test.sh
